# ml-learning

./: .gitignore
PEFT/: main.py
bedrock/: main.py  pyproject.toml
chat-backend/: main.py  pyproject.toml
chat-backend/app/: dependencies.py  main.py
chat-backend/app/api/v1/: router.py
chat-backend/app/api/v1/endpoints/: chat.py  items.py
chat-backend/app/core/: config.py
chat-backend/app/db/: session.py
chat-backend/app/models/: schemas.py
chat-backend/app/services/: chat_service.py  item_service.py
hello-fast-api/: pyproject.toml
hello-lang-chain/: .gitignore  README.md  main.py  pyproject.toml
hello-lang-graph/: main.py  pyproject.toml
hello-lang-graph-2/: main.py  pyproject.toml
llm/: main.py  pyproject.toml
open-ai-fine-tuning/: get_weather.jsonl  tsukuyomi_finetune.jsonl  つくよみちゃん会話AI育成計画.csv
peft/: pyproject.toml
