[project]
name = "hello-lang-graph-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain-core>=1.2.6",
    "langchain-openai>=1.1.6",
    "langgraph>=1.0.5",
]

[dependency-groups]
dev = [
    "ruff>=0.14.10",
]
